--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.15",
     "@arcjet/next": "^1.0.0-beta.5",
-    "@clerk/nextjs": "^6.10.2",
+    "@clerk/nextjs": "^6.36.2",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -27,7 +28,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.473.0",
-    "next": "^15.3.0",
+    "next": "^15.3.6",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.12.0",
@@ -47,7 +48,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.5",
+    "eslint-config-next": "15.3.6",
     "postcss": "^8",
     "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
